--- a/style.css
+++ b/style.css
@@ -608,6 +608,10 @@ video {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .h-9 {
   height: 2.25rem;
 }
@@ -708,6 +712,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.ml-8 {
+  margin-left: 2rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -716,12 +724,12 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mb-14 {
-  margin-bottom: 3.5rem;
+.mt-12 {
+  margin-top: 3rem;
 }
 
-.mt-28 {
-  margin-top: 7rem;
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .mt-auto {
@@ -750,13 +758,12 @@ video {
      object-fit: scale-down;
 }
 
-.outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
 .overflow-hidden {
   overflow: hidden;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-3 {
@@ -768,9 +775,9 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .py-5 {
@@ -814,10 +821,6 @@ video {
 
 .pt-20 {
   padding-top: 5rem;
-}
-
-.pt-24 {
-  padding-top: 6rem;
 }
 
 .pt-32 {
@@ -871,6 +874,14 @@ video {
   color: rgba(123, 123, 123, var(--tw-text-opacity));
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
 .w-20 {
   width: 5rem;
 }
@@ -901,10 +912,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-screen {
-  width: 100vw;
 }
 
 .z-0 {
@@ -979,6 +986,14 @@ video {
     -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
             animation-timing-function: cubic-bezier(0,0,0.2,1);
   }
+}
+
+button:focus{
+  outline: none;
+}
+
+.main_title{
+  display: inline-flex;
 }
 
 .menu_icon{
@@ -1160,6 +1175,10 @@ video {
 @media (min-width: 1024px) {
   .top-navbar {
     display: inline-flex !important;
+  }
+
+  .main_title{
+    display: none;
   }
 }
 
