--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ code {
 }
 
 .logoFont{ 
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Times", Times, serif;
   font-size: 27px;
   font-weight: 400;
 }
@@ -65,7 +65,6 @@ code {
   font-family: 'Derivia Regular', sans-serif;
   font-size: 14px;
   line-height: 22px;
-  font-weight: 100;
   color: #464646;
 }
 
@@ -75,7 +74,7 @@ code {
 
 .textHardTitle {
   padding-top: 20px;
-  font-family: 'Tenderness', sans-serif;
+  font-family: 'tenderness-regular', sans-serif;
   font-size: 27px;
   line-height: 35px;
   font-weight: 100;
@@ -91,7 +90,7 @@ code {
 }
 
 .experiencesName{
-  font-family: 'Tenderness', sans-serif;
+  font-family: 'tenderness-regular', sans-serif;
   font-size: 30px;
   line-height: 39px;
   font-weight: 100;
