--- a/src/components/weddings/WeddingView.css
+++ b/src/components/weddings/WeddingView.css
@@ -15,8 +15,38 @@
   }
 
   .weddingViewImg{
-    height:40vw;
-    width: 50vw;
+    height:60vw;
+    width: 80vw;
     margin: 5px;
     object-fit:cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .weddingViewImgDiv{
+    width: 100%;
+  }
+  @media (max-width: 640px) {
+    .weddingViewImgDivFirst{
+      display: block !important;
+    }
+    .weddingViewImgDivSecond{
+      display:none !important;
+    }
+  }
+
+  @media (min-width: 640px) {
+    .weddingViewImgDiv{
+      width: 50%;
+      padding: 30px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .weddingViewImg{
+      height:40vw;
+      width: 50vw;
+      margin: 5px;
+    }
   }
