--- a/src/components/about/AboutView.css
+++ b/src/components/about/AboutView.css
@@ -15,6 +15,15 @@
 
   .textAboutImg{
     width: 80%;
-    height: calc(50vw * 0.60);
+    height: 50vw;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     object-fit: cover;
+  }
+  @media (min-width: 768px) {
+    .textAboutImg{
+      width: 80%;
+      height: calc(50vw * 0.60);
+    } 
   }
