--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,3 +1,55 @@
 .contactMainImg{
     max-height: 23rem;
 }
+
+
+.contactImgDiv{
+    width:50%;
+    padding: 10px;
+    vertical-align:middle;
+}
+
+.textContactImg{
+    width: 80vw;
+    height: 80vw;
+    display: block;
+    margin:auto;
+    object-fit: cover;
+  }
+
+
+.contactImgDiv{
+    width: 100%;
+  }
+
+  @media (max-width: 640px) {
+    .contactImgDivFirst{
+      display: block !important;
+    }
+    .contactImgDivSecond{
+      display:none !important;
+    }
+  }
+
+
+  @media (min-width: 640px) {
+    .contactImgDiv{
+      width: 50%;
+      padding: 30px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .textContactImg{
+        width: 40vw;
+        height: 40vw;
+      } 
+
+
+/* 
+    .weddingViewImg{
+      height:40vw;
+      width: 50vw;
+      margin: 5px;
+    } */
+  }
