--- a/src/components/about/AboutView.css
+++ b/src/components/about/AboutView.css
@@ -1,29 +1,62 @@
 .textAboutDescription{
-    font-family: 'Martel', sans-serif;
-    font-size: 13px;
-    line-height: 26px;
-    color: #000000;
+  font-family: 'Martel', sans-serif;
+  font-size: 13px;
+  line-height: 26px;
+  color: #000000;
+}
+
+.textAboutTitle {
+  font-family: 'tenderness-regular', sans-serif;
+  font-size: 20px;
+  line-height: 27px;
+  font-weight: 300;
+  color: #464646;
+}
+
+.aboutMainImg{
+  max-height: 23rem;
+}
+
+
+.aboutImgDiv{
+  width:50%;
+  padding: 10px;
+  vertical-align:middle;
+}
+
+.textAboutImg{
+  width: 80vw;
+  height: 80vw;
+  display: block;
+  margin:auto;
+  object-fit: cover;
+}
+
+
+.aboutImgDiv{
+  width: 100%;
+}
+
+@media (max-width: 640px) {
+  .aboutImgDivFirst{
+    display: block !important;
   }
-  
-  .textAboutTitle {
-    font-family: 'tenderness-regular', sans-serif;
-    font-size: 20px;
-    line-height: 27px;
-    font-weight: 300;
-    color: #464646;
+  .aboutImgDivSecond{
+    display:none !important;
+  }
+}
+
+
+@media (min-width: 640px) {
+  .aboutImgDiv{
+    width: 50%;
+    padding: 30px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .textAboutImg{
-    width: 80%;
-    height: 50vw;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    object-fit: cover;
-  }
-  @media (min-width: 768px) {
-    .textAboutImg{
-      width: 80%;
-      height: calc(50vw * 0.60);
+      width: 40vw;
+      height: 40vw;
     } 
-  }
+}
