--- a/src/index.css
+++ b/src/index.css
@@ -151,12 +151,19 @@ code {
 
 .helloViewImg{
   width: 80%;
-  height: calc(50vw * 0.75);
   object-fit:contain;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-height: 500px;
 }
+@media (min-width: 768px) {
+  .helloViewImg{
+    height: calc(50vw * 0.75);
+  }
+  }
+
+
 
 .bottomBarDiv{
   background-color: #F3F5F5;
