--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+header{
+  z-index: 1;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -41,12 +45,21 @@ footer {
   color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 
-.logoFont{ 
+.backgroundLogo{
+  width: 10vw;
+  height: auto;
+  position: absolute;
+  top: 30px;
+  left: 50px;
+}
+
+/* .logoFont{ 
   font-family: "Times", Times, serif;
   font-size: 27px;
   font-weight: 400;
   color: #464646;
-}
+} */
+
 
 .categoriesMainDiv{
   max-width: 1400px;
@@ -154,6 +167,10 @@ footer {
 }
 
 
+.mainLogo{
+  width: 130px;
+  height: auto;
+}
 
 
 @media (min-width: 768px) {
